--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@coveo/headless": "^0.16.2",
     "@coveo/search-token-server": "^1.2.1",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "concurrently": "^5.3.0",
     "dotenv": "^8.6.0",
